# spasataka

./: CHANGELOG.md  build.gradle  cerebras api  gpt  gradle.properties  local.properties  settings.gradle
app/: build.gradle  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Acura.json  Audi.json  BMW.json  Chevrolet.json  Ford.json  Genesis.json  Honda.json  Hyundai.json  Infiniti.json  Jaguar.json  Jeep.json  Kia.json  Land-Rover.json  Lexus.json  Mazda.json  Mercedes-Benz.json  Mitsubishi.json  Nissan.json  Peugeot.json  Porsche.json  Renault.json  Subaru.json  Tesla.json  Toyota.json  Volkswagen.json  Volvo.json  vehicles.json
app/src/main/jniLibs/: CMakeLists.txt
app/src/main/res/anim/: button_press.xml  layout_slide_in_right.xml  pulse_glow.xml  twinkle_animation.xml
app/src/main/res/drawable/: bg_frequency_badge.xml  bg_gradient_primary.xml  bg_space_gradient.xml  feature_icon_background.xml  ic_bluetooth.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_legacy.xml
app/src/main/res/layout/: activity_about.xml  activity_autel_test.xml  activity_bluetooth_connection.xml  activity_data_logger.xml  activity_diagnostics.xml  activity_ecu_flashing.xml  activity_help.xml  activity_live_data.xml  activity_main.xml  activity_quick_scan.xml  activity_remote_start.xml  activity_service_reset.xml  activity_settings.xml  activity_vehicle_info.xml  activity_vehicle_selection.xml  item_bluetooth_device.xml  item_current_data.xml  item_diagnostic_feature.xml  (+6 more)
tools/: jni_symbols.txt  list_jni.sh
(+276 files in other folders)
